--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -7,5 +7,5 @@ WORKDIR /src
 
 ENTRYPOINT cd /src \
     && ls -lh \
-    && CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -o ./app/kube-ctl-svc -ldflags "-X main._commitSha=${COMMITSHA} -X main._commitTime=${COMMITTIME}"
+    && CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -o ./app/kube-svc-ctl -ldflags "-X main._commitSha=${COMMITSHA} -X main._commitTime=${COMMITTIME}"
 
